--- a/themes/hugo-cactus-theme/layouts/partials/title.html
+++ b/themes/hugo-cactus-theme/layouts/partials/title.html
@@ -1,3 +1,7 @@
-<header>
-  <h1>memotive</h1>
-</header>
+<div class="profile">
+    <section id="wrapper">
+        <header id="header">
+            <h1>{{ .Site.Title }}</h1>
+        </header>
+    </section>
+</div>
