--- a/themes/hugo-cactus-theme/layouts/partials/nav.html
+++ b/themes/hugo-cactus-theme/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
 	{{ $url := replace .Permalink .Site.BaseURL "" }}
 	{{ if not .IsHome }}
-		<a href='{{ .Site.BaseURL }}'> <span class="arrow">←</span>{{ with .Site.Params.home }}{{ . }}{{ else }}Home{{ end }}</a>
+		<a href='{{ .Site.BaseURL }}'>{{ with .Site.Params.home }}{{ . }}{{ else }}Home{{ end }}</a>
 	{{ end }}
 
 	{{ if ne $url "about/" }}
