--- a/themes/hugo-cactus-theme/layouts/index.html
+++ b/themes/hugo-cactus-theme/layouts/index.html
@@ -2,7 +2,7 @@
 	<body>
     {{ partial "nav.html" . }}
 
-    <!-- {{ partial "title.html" . }} -->
+    {{ partial "title.html" . }}
 
     <h1>{{ partial "profile.html" . }}</h1>
 
