--- a/themes/hugo-cactus-theme/layouts/partials/title.html
+++ b/themes/hugo-cactus-theme/layouts/partials/title.html
@@ -1,4 +1,4 @@
-<div class="profile">
+<div class="blog-title">
     <section id="wrapper">
         <header id="header">
             <h1>{{ .Site.Title }}</h1>
