--- a/themes/hugo-cactus-theme/layouts/partials/profile.html
+++ b/themes/hugo-cactus-theme/layouts/partials/profile.html
@@ -2,7 +2,7 @@
     <section id="wrapper">
         <header id="header">
             <a href='{{ .Site.BaseURL }}about'>
-                <img id="avatar" src="{{ .Site.BaseURL }}images/avatar.png"/>
+                <img id="avatar" src="{{ .Site.BaseURL }}images/profile3.png"/>
             </a>
             <h1>{{ .Site.Params.name }}</h1>
             <h2>{{ .Site.Params.bio | markdownify }}</h2>
