--- a/themes/hugo-cactus-theme/layouts/partials/share.html
+++ b/themes/hugo-cactus-theme/layouts/partials/share.html
@@ -1,4 +1,4 @@
-<a class="twitter" href="https://twitter.com/intent/tweet?text={{ .Permalink }} - {{ .Title }} {{ with .Site.Params.twitter }}by @{{ . }}{{ end }}" target="_blank"><span class="icon-twitter"> {{ with .Site.Params.tweet }}{{ . }}{{ else }}Tweet{{ end }}</span></a>
+<a class="twitter" href="https://twitter.com/intent/tweet?text={{ .Title }} - {{ .Permalink }} {{ with .Site.Params.twitter }}by @{{ . }}{{ end }}" target="_blank"><span class="icon-twitter"> {{ with .Site.Params.tweet }}{{ . }}{{ else }}Tweet{{ end }}</span></a>
 
 <a class="facebook" href="#" onclick="
     window.open(
